refactor(file): improve path handling and validation (#82)
* refactor(file): improve path handling and validation

* fix: update XML escaping to use escapeXml10 for improved compatibility

* feat(mime): integrate Apache Tika for content-based MIME detection across services

* test: enhance MultipartFile tests with input stream handling and content type validation